<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DenunciaMX</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Fragment Main -->
    <string name="title_denunciar">DENUNCIAR</string>
    <string name="title_mis_denuncias">MIS DENUNCIAS</string>
    <string name="title_mi_perfil">MI PERFIL</string>
    <string name="title_nuestra_ubicacion">OFICINAS</string>
    <string name="title_pot">PORTAL DE OBLIGACIONES EN TRANSPARENCIA</string>
    <string name="title_informacion">INFORMACION</string>
    <string name="title_acerca_de">ACERCA DE</string>

    <!-- Fragment Denunciar -->
    <string name="title_denunicar_action_bar">DENUNCIAR</string>
    <string name="title_tabhost_capturar_fragment">CAPTURAR</string>
    <string name="title_tabhost_evidencia_fragment">EVIDENCIA</string>
    <string name="title_tabhost_ubicacion_fragment">UBICACION</string>
    <string name="title_tabhost_enviar_fragment">ENVIAR</string>

    <!--Fragment Datos Generales {Denuncia}-->
    <string name="title_datos_generales">INFORMACION SOBRE LA DENUNCIA</string>
    <string name="title_desea_presentar_su_queja">¿DESEA PRESENTAR SU DENUNCIA DE MANERA ANÓNIMA?</string>
    <string name="title_que">¿QUÉ LE PASÓ, QUÉ VIO O DE QUÉ SE ENTERÓ? </string>
    <string name="title_donde">¿DÓNDE SUCEDIERON LOS HECHOS QUE DENUNCIA?  </string>
    <string name="title_cuando_fecha">FECHA DE LOS HECHOS</string>
    <string name="title_cuando_hora">HORA DE LOS HECHOS</string>
    <string name="title_como">¿CÓMO SE LLEVARON A CABO ?  </string>
    <string name="title_quienes">¿QUIÉNES LO HICIERON ? </string>
    <string name="title_que_servicio">¿QUÉ TRÁMITE O SERVICIO PRETENDÍA HACER U OBTENER AL MOMENTO EN QUE OCURRIERON LOS HECHOS QUE DENUNCIA ?  </string>
    <string name="estatus_de_la_denuncia">ESTATUS DE LA DENUNCIA</string>
    <string name="delete_evidencia">borrar</string>


    <!--Sound Record Activity -->
    <string name="title_sound_record_activity">Graba tu evidencia</string>

    <!--Provider-->
    <string name="content_authority">com.syca.apps.gob.denunciamx</string>
    <string name="title_quiero_denunciar_a">QUIERO DENUNCIAR A UN FUNCIONARIO(S) QUE TRABAJA EN:</string>
    <string name="title_evidencia_recopilada">EVIDENCIA RECOPILADA</string>
    <string name="title_ubicacion_de_los_hechos">UBICACIÓN DE LOS HECHOS</string>
    <string name="buscar_ubicacion">BUSCAR UBICACION</string>


    <!--Registration-->
    <string name="gcm_project_number"></string>
    <string name="preference_file">denuncia_prefrerence_file</string>
    <string name="is_register_in_service"></string><!--this should be empty to register-->
    <string name="registerToken">register_token</string>


</resources>
