<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#111"
        android:orientation="vertical"
        android:id="@+id/denunciar_view">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_denunciar"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:gravity="center"
                />
        </LinearLayout>


        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#222"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_mis_denuncias"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center"
                />
            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_mi_perfil"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_nuestra_ubicacion"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center"
                />
        </LinearLayout>


        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#333"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_pot"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center"
                />
            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#444">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_informacion"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center"
                />
            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/title_acerca_de"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:gravity="center"
                />

            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="#555"
        android:layout_weight=".5">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#fff"
            android:text="Emergencias"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:gravity="center"
            />
        </LinearLayout>

</LinearLayout>
