<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.syca.apps.gob.denunciamx.ui.ui.DatosGeneralesFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_datos_generales"
                        android:layout_margin="5dp"
                        android:textColor="#fafafa"
                        android:textColorHint="#fafafa"/>
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_desea_presentar_su_queja"
                            android:layout_margin="5dp"
                            android:textColorHint="#fafafa"
                            android:textColor="#fafafa"/>

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_margin="5dp"
                        android:id="@+id/denuncia_tipo_radio"
                        android:checkedButton="@+id/denuncia_publica_positive"
                        >

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="fill_parent"
                           android:text="SI"
                           android:textColor="#fafafa"
                           android:button="@drawable/denunciamx_btn_radio_holo_light"
                           android:id="@+id/denuncia_publica_positive"
                           />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="NO"
                            android:textColor="#fafafa"
                            android:button="@drawable/denunciamx_btn_radio_holo_light"
                            android:id="@+id/denuncia_publica_negative"/>
                        </RadioGroup>


                <EditText
                    android:id="@+id/que_denuncia_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:hint="@string/title_que"
                    android:isScrollContainer="true"
                    android:minLines="3"
                    android:maxLines="5"
                    android:padding="5dp"
                    android:textColorHint="#fafafa"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="#fafafa"
                    android:background="@drawable/rectangle_edit_text"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/donde_denuncia_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:hint="@string/title_donde"
                    android:isScrollContainer="true"
                    android:minLines="3"
                    android:maxLines="5"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:padding="5dp"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:background="@drawable/rectangle_edit_text"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/cuando_denuncia_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:hint="@string/title_cuando"
                    android:isScrollContainer="true"
                    android:minLines="3"
                    android:maxLines="5"
                    android:padding="5dp"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:background="@drawable/rectangle_edit_text"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/como_denuncia_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:hint="@string/title_como"
                    android:isScrollContainer="true"
                    android:minLines="3"
                    android:maxLines="5"
                    android:padding="5dp"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:background="@drawable/rectangle_edit_text"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/quienes_denuncia_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:hint="@string/title_quienes"
                    android:isScrollContainer="true"
                    android:minLines="3"
                    android:maxLines="5"
                    android:padding="5dp"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:background="@drawable/rectangle_edit_text"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/servicio_denuncia_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:hint="@string/title_que_servicio"
                    android:isScrollContainer="true"
                    android:minLines="3"
                    android:maxLines="5"
                    android:padding="5dp"
                    android:textColorHint="#fafafa"
                    android:textColor="#fafafa"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:background="@drawable/rectangle_edit_text"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>
